refactor(api): modernize interfaces and move AdditionalItemData to iped.datasource
Remove redundant modifiers, use enhanced-for loops, tidy javadoc and
strengthen interface/default-method tests across the public API module.
AdditionalItemData moves from iped.data to iped.datasource where its
consumers live.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>